# clcpp

./: .gitignore  README.md
code/: README.md  main.py  pyproject.toml
code/src/alias_graph/: __init__.py  builder.py  chebi.py  code_switch.py  code_switch_llm.py  confusion_analysis.py  hf_export.py  matching.py  progressive_code_switch.py  progressive_hf.py  retrieval_results.py  wiki_quality.py  wikidata_names.py
code/src/alias_graph/code_switch_prompts/: nonchem_swap.txt
code/src/alias_graph/qac_generation/: __init__.py  claude_grading.py  concept_qa.py  progressive_qa.py  variant_qa.py
code/src/alias_graph/qac_generation/concept_query_generation_prompts/: de.txt  en.txt  es.txt  fr.txt  zh.txt
code/src/alias_graph/qac_generation/concept_query_with_term_prompts/: de.txt  en.txt  es.txt  fr.txt  zh.txt
code/src/alias_graph/qac_generation/faithfulness_prompt/: faithfulness_prompt.txt
code/src/multi_lingual_qac/: __init__.py  cli.py  config.py  pipeline.py
code/src/multi_lingual_qac/dataloaders/: __init__.py  epo_bdds.py  epo_xml.py  google_patents.py
code/src/multi_lingual_qac/export/: __init__.py  hf_upload.py
code/src/multi_lingual_qac/mteb/: __init__.py  evaluation.py  question_analysis.py  runs.py
code/src/multi_lingual_qac/preprocess/: __init__.py  corpus.py  filter_multilingual.py
code/src/multi_lingual_qac/progressive/: __init__.py  eval.py
code/src/multi_lingual_qac/qac_generation/: __init__.py  balanced_multilingual_qa.py  multilingual_qa.py  openai_qa.py
data/: README.md
data/annotations/: evaluated_annotations.xlsx
(+24 files in other folders)
